--- a/rt.vcxproj.filters
+++ b/rt.vcxproj.filters
@@ -100,18 +100,6 @@
     <CustomBuildStep Include="src\rt\cuda\RendererKernels.cu">
       <Filter>cuda</Filter>
     </CustomBuildStep>
-    <CustomBuildStep Include="src\rt\kernels\fermi_speculative_while_while.cu">
-      <Filter>kernels</Filter>
-    </CustomBuildStep>
-    <CustomBuildStep Include="src\rt\kernels\tesla_persistent_packet.cu">
-      <Filter>kernels</Filter>
-    </CustomBuildStep>
-    <CustomBuildStep Include="src\rt\kernels\tesla_persistent_speculative_while_while.cu">
-      <Filter>kernels</Filter>
-    </CustomBuildStep>
-    <CustomBuildStep Include="src\rt\kernels\tesla_persistent_while_while.cu">
-      <Filter>kernels</Filter>
-    </CustomBuildStep>
     <CustomBuildStep Include="src\rt\ray\RayBufferKernels.cu">
       <Filter>ray</Filter>
     </CustomBuildStep>
@@ -121,6 +109,33 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="src\rt\kernels\kepler_dynamic_fetch.cu">
+      <Filter>kernels</Filter>
+    </None>
+    <None Include="src\rt\kernels\kepler_dynamic_fetch_idx.cu">
+      <Filter>kernels</Filter>
+    </None>
+    <None Include="src\rt\kernels\pascal_bin_dynamic_fetch.cu">
+      <Filter>kernels</Filter>
+    </None>
+    <None Include="src\rt\kernels\pascal_bin.cu">
+      <Filter>kernels</Filter>
+    </None>
+    <None Include="src\rt\kernels\pascal_bin_idx.cu">
+      <Filter>kernels</Filter>
+    </None>
+    <None Include="src\rt\kernels\pascal_oct.cu">
+      <Filter>kernels</Filter>
+    </None>
+    <None Include="src\rt\kernels\pascal_oct_idx.cu">
+      <Filter>kernels</Filter>
+    </None>
+    <None Include="src\rt\kernels\pascal_oct_mini.cu">
+      <Filter>kernels</Filter>
+    </None>
+    <None Include="src\rt\kernels\pascal_quad.cu">
+      <Filter>kernels</Filter>
+    </None>
+    <None Include="src\rt\kernels\pascal_quad_idx.cu">
       <Filter>kernels</Filter>
     </None>
   </ItemGroup>
